cd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-minikube-api-service
spec:
  type: NodePort
  selector:
    app: my-minikube-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30001
